# oculus

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
configs/: config.example.yaml
configs/collectors/: http.yaml  ping.yaml  tcp.yaml
docs/: PRD.md  frontend.md  getting-started.md  lib.md  schema.md
src/: collector.rs  config.rs  lib.rs  main.rs  server.rs  storage.rs
src/collector/: http.rs  network.rs  ping.rs  registry.rs  tcp.rs  traits.rs
src/collector/http/: collector.rs
src/collector/network/: tcp.rs
src/collector/ping/: collector.rs
src/collector/tcp/: collector.rs
src/config/: app.rs  collector.rs  mod.rs  validation.rs
src/storage/: actor.rs  builder.rs  collector_store.rs  error.rs  facades.rs  pool.rs  schema.rs  types.rs
src/storage/db/: mod.rs  sqlite.rs
templates/: dashboard.html
templates/partials/: collectors.html  events.html  metrics.html
templates/static/css/: tailwind.input.css
templates/static/js/: app.js
tests/: api_integration.rs
