[package]
name = "oculus"
version = "0.1.0"
edition = "2024"
description = "Unified telemetry system for monitoring and observability"
license = "MIT"

[lib]
name = "oculus"
path = "src/lib.rs"

[[bin]]
name = "oculus"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
duckdb = { version = "1.4", features = ["r2d2", "bundled"] }
r2d2 = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

