[package]
name = "oculus"
version = "0.1.0"
edition = "2024"
description = "Unified telemetry system for monitoring and observability"
license = "MIT"

[lib]
name = "oculus"
path = "src/lib.rs"

[[bin]]
name = "oculus"
path = "src/main.rs"

[dependencies]
# Async traits
async-trait = "0.1"

# Job scheduling
tokio-cron-scheduler = "0.15"
cron = "0.15"
uuid = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
duckdb = { version = "1.4", features = ["r2d2", "bundled"] }
r2d2 = "0.8"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Template engine
askama = "0.12"
askama_axum = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = "0.26"
strum_macros = "0.26"

[dev-dependencies]
tempfile = "3"

